applications/bolig/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bolig
  namespace: bolig
spec:
  type: ClusterIP
  selector:
    app: bolig
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      protocol: TCP
