applications/bolig/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bolig
  namespace: bolig
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "bolig.erikak.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bolig
          port: 3000
